  
  o Added view data dialog, supporting viewing a subset of the active data set, and sort data set dialog (suggestions of Sung-il Cho).
  
  o Added connect option to plot means dialog (suggestion of Graham Smith).
  
  o Added Welch F-test option to one-way ANOVA dialog.
  
  o The Shapiro-Wilk test for normality dialog is replaced by a more general normality-tests dialog.
  
  o Various small improvements/bug fixes.
  
  
Changes to Version 2.2-5

  o Fixed data editor to work properly with NAs in existing data sets.


Changes to Version 2.2-4

  o Corrected Slovenian translation (by Matjaz Jeran).
  
  o Embeds 3D rgl graphs in HTML output from R Markdown.
  
  o Improvements to the Rcmdr data editor.
  
  o New version of ismdi() doesn't need compiled code (thanks to Duncan Murdoch), eliminating all compiled code from the Rcmdr package.
  
  o showData() data set displays now updated automatically.
  
  o Small improvements and bug fixes.
  

Changes to Version 2.2-3

  o Updated Slovenian translation (thanks to Matjaz Jeran).
  
  o Fixes to French translation (by Milan Bouchet-Valat).


Changes to Version 2.2-2

  o Updated Galician translation (thanks to Rafael Rodriguez Gayoso).
  
  o Fixes to French translation (by Milan Bouchet-Valat) and Chinese translation (by Tsung-wu Ho).
  
  o Added keep argument to popOutput() (suggestion of Liviu Andronic); similar argument added to popCommand().
  
  o Use new-style R icon.
  
  o Binomial and quasibinomial GLMs with logit link now print exponentiated coefficients ("odds" ratios), as do poisson and quasipoisson GLMs with log link (generalizing a suggestion of Jose Ramon Rueda).
  
  o Names of R objects to be created are no longer translated (e.g., "Dataset", "NormalSamples") into other languages to avoid potential problems (issue reported by Tsung-wu Ho).
  
  o Recognize new location for LaTeX in Mac OS X El Capitan.
  

Changes to Version 2.2-1
